--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="NFT1/style.css" />
   </head>
   <body>
-    <head>
-      <div class="div-logo">
-        <img src="/NFT1/logo-nft.png" alt="" class="imagen-logo" />
-        <h2 class="titulo-logo">NUCBA NFT</h2>
-      </div>
-      <nav class="nav-bar">
+    <header class="header">
+      <img src="/NFT1/logo-nft1.png" alt="" class="imagen-logo" />
+
+      <nav class="navbar">
         <ul class="navbar-list">
           <li><a href="#">Home</a></li>
           <li><a href="#">Descubre</a></li>
@@ -20,12 +18,13 @@
           <li><a href="#">YouTube</a></li>
           <li><a href="#">Contactanos</a></li>
         </ul>
-        <img src="/NFT1/carrito-compras.png" alt="" class="logo-carrito" />
+
+        <img src="/NFT1/carrito-compra.png" alt="" class="logo-carrito" />
       </nav>
 
       <!-- <div class="nav-bar"></div>
       <div class="carrito-nav"></div> -->
-    </head>
+    </header>
 
     <main>
       <div class="info-cards-container">
