agregue primera section

--- a/index.html
+++ b/index.html
@@ -27,11 +27,48 @@
     </header>
 
     <main>
-      <div class="info-cards-container">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+      <section id="hero">
+        <div class="hero-info">
+          <h1>Descubre la nueva era Crypto</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
+            saepe obcaecati magni natus, adipisci quo minus impedit praesentium
+            explicabo atque nobis <span>repudiandae</span> provident animi
+            perspiciatis.
+          </p>
+          <a href="#" class="btn">Be NucBer</a>
+        </div>
+        <!-- carta del naft -->
+        <div class="hero-card">
+          <img src="/NFT1/soldado1.png" alt="" class="card1" />
+          <div class="hero-card-info">
+            <!-- parte de ariiba -->
+            <div class="hero-card-top">
+              <h3>The greatest of all time</h3>
+              <span>10</span>
+            </div>
+            <!-- parte de abajo -->
+            <div class="hero-card-botton">
+              <div class="hero-card-creator">
+                <img
+                  src="/NFT1/soldado3.png"
+                  alt="imagen del creador"
+                  class="soldado3"
+                />
+                <div class="creator-info">
+                  <span>creador</span>
+                  <p>Carles rexar</p>
+                </div>
+              </div>
+              <!-- price -->
+              <div class="hero-card-price">
+                <p>value</p>
+                <span>9 ETH</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <h2></h2>
