agregue section info sin terminar

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
           <h1>Descubre la nueva era Crypto</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-            saepe obcaecati magni natus, adipisci quo minus impedit praesentium
-            explicabo atque nobis <span>repudiandae</span> provident animi
-            perspiciatis.
+            praesentium explicabo atque nobis <span>repudiandae</span> provident
+            animi perspiciatis.
           </p>
           <a href="#" class="btn">Be NucBer</a>
         </div>
@@ -64,6 +63,44 @@
               <div class="hero-card-price">
                 <p>value</p>
                 <span>9 ETH</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="info">
+        <div class="section-info">
+          <h2>Crea, Aprende Y Comparte Los NFTs</h2>
+          <div class="cards-opciones-info">
+            <div class="info-cards">
+              <img src="/NFT1/logo-nft1.png" alt="" class="logo-nft" />
+              <div class="info-card1">
+                <h3>Configura tu Wallet</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Debitis, similique!
+                </p>
+              </div>
+            </div>
+            <div class="info-cards">
+              <img src="/NFT1/logo-nft1.png" alt="" class="logo-nft" />
+              <div class="info-card2">
+                <h3>Agrega Tus NFTs</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Debitis, similique!
+                </p>
+              </div>
+            </div>
+            <div class="info-cards">
+              <img src="/NFT1/logo-nft1.png" alt="" class="logo-nft" />
+              <div class="info-card3">
+                <h3>Coleccionalos</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Debitis, similique!
+                </p>
               </div>
             </div>
           </div>
