agregue las cards de pjs

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <!-- carta del naft -->
         <div class="hero-card">
-          <img src="/NFT1/soldado1.png" alt="" class="card1" />
+          <img src="/NFT1/soldado1.2.png" alt="" class="card1" />
           <div class="hero-card-info">
             <!-- parte de ariiba -->
             <div class="hero-card-top">
@@ -50,7 +50,7 @@
             <div class="hero-card-botton">
               <div class="hero-card-creator">
                 <img
-                  src="/NFT1/soldado3.png"
+                  src="/NFT1/personas1.jpeg"
                   alt="imagen del creador"
                   class="soldado3"
                 />
@@ -76,7 +76,7 @@
             <div class="info-cards">
               <img src="/NFT1/logo-nft1.png" alt="" class="logo-nft" />
               <div class="info-card1">
-                <h3>Configura tu Wallet</h3>
+                <h3 class="titulo-cards-section">Configura tu Wallet</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Debitis, similique!
@@ -86,7 +86,7 @@
             <div class="info-cards">
               <img src="/NFT1/logo-nft1.png" alt="" class="logo-nft" />
               <div class="info-card2">
-                <h3>Agrega Tus NFTs</h3>
+                <h3 class="titulo-cards-section">Agrega Tus NFTs</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Debitis, similique!
@@ -96,7 +96,7 @@
             <div class="info-cards">
               <img src="/NFT1/logo-nft1.png" alt="" class="logo-nft" />
               <div class="info-card3">
-                <h3>Coleccionalos</h3>
+                <h3 class="titulo-cards-section">Coleccionalos</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Debitis, similique!
@@ -105,6 +105,276 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section id="discover">
+        <div class="discover-info">
+          <h2>DESCUBRE UNA NUEVA ERA DE COLECCIONES</h2>
+          <div class="discover-text">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita
+              illum nisi consequuntur fuga eveniet voluptate!
+            </p>
+            <a href="#">empezar ahora</a>
+          </div>
+        </div>
+        <div class="discover-cards">
+          <img
+            src="/NFT1/soldado1.1.png"
+            alt="soldado caminando"
+            class="soldado-caminando"
+          />
+          <img
+            src="/NFT1/soldado1.5.png"
+            alt="soldado caminando"
+            class="soldado-caminando"
+          />
+          <img
+            src="/NFT1/soldado1.8.png"
+            alt="soldado caminando"
+            class="soldado-caminando"
+          />
+        </div>
+      </section>
+
+      <section id="products">
+        <h2>Hot NFTs</h2>
+        <div class="categories">
+          <button class="category">👍todas</button>
+          <button class="category">⚽futbol</button>
+          <button class="category">🎺musica</button>
+          <button class="category">📽️peliculas</button>
+          <button class="category">🏎️autos</button>
+          <button class="category">⚖️politicos</button>
+        </div>
+
+        <div class="products-container">
+          <!-- product 1 -->
+          <div class="product">
+            <img src="/NFT1/soldado1.2.png" alt="flecha" class="soldado-img" />
+            <div class="product-info">
+              <div class="product-top">
+                <h3>Golden felcha</h3>
+                <p>current bid</p>
+              </div>
+              <div class="product-mid">
+                <div class="product-user">
+                  <img src="/NFT1/personas2.jpg" alt="" class="personas22" />
+                  <p>@amadeus</p>
+                </div>
+                <span>6.69ETH</span>
+              </div>
+              <div class="product-bot">
+                <div class="offer-time">
+                  <img
+                    src="/NFT1/llama.png"
+                    alt=""
+                    class="carrito-compra-img"
+                  />
+                  <p>12:55:32</p>
+                </div>
+                <button class="btn-add">Add</button>
+              </div>
+            </div>
+          </div>
+          <!-- product 2 -->
+          <div class="product">
+            <img src="/NFT1/soldado1.3.png" alt="flecha" class="soldado-img" />
+            <div class="product-info">
+              <div class="product-top">
+                <h3>Golden felcha</h3>
+                <p>current bid</p>
+              </div>
+              <div class="product-mid">
+                <div class="product-user">
+                  <img src="/NFT1/personas2.jpg" alt="" class="personas22" />
+                  <p>@amadeus</p>
+                </div>
+                <span>6.69ETH</span>
+              </div>
+              <div class="product-bot">
+                <div class="offer-time">
+                  <img
+                    src="/NFT1/llama.png"
+                    alt=""
+                    class="carrito-compra-img"
+                  />
+                  <p>12:55:32</p>
+                </div>
+                <button class="btn-add">Add</button>
+              </div>
+            </div>
+          </div>
+          <!-- product 3 -->
+          <div class="product">
+            <img src="/NFT1/soldado1.4.png" alt="flecha" class="soldado-img" />
+            <div class="product-info">
+              <div class="product-top">
+                <h3>Golden felcha</h3>
+                <p>current bid</p>
+              </div>
+              <div class="product-mid">
+                <div class="product-user">
+                  <img src="/NFT1/personas2.jpg" alt="" class="personas22" />
+                  <p>@amadeus</p>
+                </div>
+                <span>6.69ETH</span>
+              </div>
+              <div class="product-bot">
+                <div class="offer-time">
+                  <img
+                    src="/NFT1/llama.png"
+                    alt=""
+                    class="carrito-compra-img"
+                  />
+                  <p>12:55:32</p>
+                </div>
+                <button class="btn-add">Add</button>
+              </div>
+            </div>
+          </div>
+          <!-- product 4 -->
+          <div class="product">
+            <img src="/NFT1/soldado1.5.png" alt="flecha" class="soldado-img" />
+            <div class="product-info">
+              <div class="product-top">
+                <h3>Golden felcha</h3>
+                <p>current bid</p>
+              </div>
+              <div class="product-mid">
+                <div class="product-user">
+                  <img src="/NFT1/personas2.jpg" alt="" class="personas22" />
+                  <p>@amadeus</p>
+                </div>
+                <span>6.69ETH</span>
+              </div>
+              <div class="product-bot">
+                <div class="offer-time">
+                  <img
+                    src="/NFT1/llama.png"
+                    alt=""
+                    class="carrito-compra-img"
+                  />
+                  <p>12:55:32</p>
+                </div>
+                <button class="btn-add">Add</button>
+              </div>
+            </div>
+          </div>
+          <!-- product 5 -->
+          <div class="product">
+            <img src="/NFT1/soldado1.1.png" alt="flecha" class="soldado-img" />
+            <div class="product-info">
+              <div class="product-top">
+                <h3>Golden felcha</h3>
+                <p>current bid</p>
+              </div>
+              <div class="product-mid">
+                <div class="product-user">
+                  <img src="/NFT1/personas2.jpg" alt="" class="personas22" />
+                  <p>@amadeus</p>
+                </div>
+                <span>6.69ETH</span>
+              </div>
+              <div class="product-bot">
+                <div class="offer-time">
+                  <img
+                    src="/NFT1/llama.png"
+                    alt=""
+                    class="carrito-compra-img"
+                  />
+                  <p>12:55:32</p>
+                </div>
+                <button class="btn-add">Add</button>
+              </div>
+            </div>
+          </div>
+          <!-- product 6 -->
+          <div class="product">
+            <img src="/NFT1/soldado1.6.png" alt="flecha" class="soldado-img" />
+            <div class="product-info">
+              <div class="product-top">
+                <h3>Golden felcha</h3>
+                <p>current bid</p>
+              </div>
+              <div class="product-mid">
+                <div class="product-user">
+                  <img src="/NFT1/personas2.jpg" alt="" class="personas22" />
+                  <p>@amadeus</p>
+                </div>
+                <span>6.69ETH</span>
+              </div>
+              <div class="product-bot">
+                <div class="offer-time">
+                  <img
+                    src="/NFT1/llama.png"
+                    alt=""
+                    class="carrito-compra-img"
+                  />
+                  <p>12:55:32</p>
+                </div>
+                <button class="btn-add">Add</button>
+              </div>
+            </div>
+          </div>
+          <!-- product 7 -->
+          <div class="product">
+            <img src="/NFT1/soldado1.7.png" alt="flecha" class="soldado-img" />
+            <div class="product-info">
+              <div class="product-top">
+                <h3>Golden felcha</h3>
+                <p>current bid</p>
+              </div>
+              <div class="product-mid">
+                <div class="product-user">
+                  <img src="/NFT1/personas2.jpg" alt="" class="personas22" />
+                  <p>@amadeus</p>
+                </div>
+                <span>6.69ETH</span>
+              </div>
+              <div class="product-bot">
+                <div class="offer-time">
+                  <img
+                    src="/NFT1/llama.png"
+                    alt=""
+                    class="carrito-compra-img"
+                  />
+                  <p>12:55:32</p>
+                </div>
+                <button class="btn-add">Add</button>
+              </div>
+            </div>
+          </div>
+          <!-- product 8 -->
+          <div class="product">
+            <img src="/NFT1/soldado1.8.png" alt="flecha" class="soldado-img" />
+            <div class="product-info">
+              <div class="product-top">
+                <h3>Golden felcha</h3>
+                <p>current bid</p>
+              </div>
+              <div class="product-mid">
+                <div class="product-user">
+                  <img src="/NFT1/personas2.jpg" alt="" class="personas22" />
+                  <p>@amadeus</p>
+                </div>
+                <span>6.69ETH</span>
+              </div>
+              <div class="product-bot">
+                <div class="offer-time">
+                  <img
+                    src="/NFT1/llama.png"
+                    alt=""
+                    class="carrito-compra-img"
+                  />
+                  <p>12:55:32</p>
+                </div>
+                <button class="btn-add">Add</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="btn-load">Ver Mas</button>
       </section>
     </main>
 
