agregue el footer

--- a/index.html
+++ b/index.html
@@ -377,6 +377,14 @@
         <button class="btn-load">Ver Mas</button>
       </section>
     </main>
+    <footer>
+      <ul class="foother-link">
+        <li><a href="#">Terminos de uso</a></li>
+        <li><a href="#">Trabaja Con Nosotros</a></li>
+        <li><a href="#">Soporte</a></li>
+      </ul>
+      <p>Hecho con ❤️ en <span>NUCBACRIPTO</span></p>
+    </footer>
 
     <h2></h2>
   </body>
